Changed to java 1.8 accepted filereader function